Implement Add user, deleted, Retrieve of user list, Modify test_vim
