# src/gatekeeper/gatekeeper/models/users.py
@@ -57,3 +57,16 @@ class User(UuidDocument, TimestampedDocument):
 
     def validatePassword(self, password: str) -> bool:
         return bytes(self.passwordHash) == hashPassword(password, self.passwordSalt)
+
+    meta = {'allow_inheritance': True}
+
+
+class AddUser(User):
+
+    """
+    A mongoengine document base class for User Registration
+    """
+
+    city = StringField(required=True)
+    country = StringField(required=True)
+    companyName = StringField(required=True)
